--- a/services.html
+++ b/services.html
@@ -157,7 +157,7 @@
               <div class="row">
                 <div class="col-lg-10" >
                   <div class="image_wrap">
-                    <img src="asset/images/about/img3.png" alt="Adh - About Image">
+                    <img src="asset/images/about/about_3.png" alt="Adh - About Image">
                   </div>
                 </div>
                 <div class="col-lg-2" style="visibility: hidden">
