--- a/services.html
+++ b/services.html
@@ -229,7 +229,7 @@ Des solutions technologiques complètes pour votre transformation digitale
                         <i class="fa-regular fa-circle-dot"></i>  
                       </span>
                       <span class="icon_list_text">
-                      Développements d’applications web et mobiles sur mesure & Reporting
+                       Développements d'applications web et mobiles sur mesure & Reporting (PHP/Laravel, JavaScript/React/Vue.js, Flutter, WordPress, Drupal, Office 365, Power BI, Tableau)
                     </span>
                     </li>
 
