--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                                     </button>
                                 </li>
                                 <li>
-                                    <a class="btn btn-primary" href=" ">
-                                        <span class="btn_label" data-text="Démarrer">Nous Contacter</span>
+                                    <a class="btn btn-primary" href="votreprojet.html">
+                                        <span class="btn_label" data-text="Démarrer">Démarrer Votre projet</span>
                                         <span class="btn_icon">
                                             <i class="fa-solid fa-arrow-up-right"></i>
                                         </span>
@@ -226,142 +226,172 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_1.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Ecobank_logo.webp" alt="adh - ecobank">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_2.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_CGTS.jpg" alt="adh - cgts">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_3.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Matanti.jpg" alt="adh - Logo Matanti">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_4.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Nocibe.jpg" alt="ADH -  Logo_Nocibe">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_5.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/LTG_Conseil_Logo.svg" alt="ADH - LTG">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_6.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/nsia_banque.jpg" alt="ADH - NSIA Banque Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_7.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/scb.jpeg" alt="ADH - SCB Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_1.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo-SOS-new.png" alt="ADH -  Logo-SOS">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_2.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/71356-pnhg.jpg" alt="ADH - PNHG Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_3.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/em.jpg" alt="ADH - Etat major Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_4.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/aid.jpeg" alt="ADH - Client Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_5.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/proximajobpng" alt="ADH - Proximajob Logo Image">
+                  </div>
+                </div>
+              
+                                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/Logo_CGTS.jpg" alt="adh - cgts">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_6.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Matanti.jpg" alt="adh - Logo Matanti">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_7.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Nocibe.jpg" alt="ADH -  Logo_Nocibe">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_1.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/LTG_Conseil_Logo.svg" alt="ADH - LTG">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_2.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/nsia_banque.jpg" alt="ADH - NSIA Banque Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_3.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/scb.jpeg" alt="ADH - SCB Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_4.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo-SOS-new.png" alt="ADH -  Logo-SOS">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_5.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/71356-pnhg.jpg" alt="ADH - PNHG Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_6.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/em.jpg" alt="ADH - Etat major Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_7.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/aid.jpeg" alt="ADH - Client Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_1.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/proximajobpng" alt="ADH - Proximajob Logo Image">
+                  </div>
+                </div>                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/Logo_CGTS.jpg" alt="adh - cgts">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_2.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Matanti.jpg" alt="adh - Logo Matanti">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_3.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo_Nocibe.jpg" alt="ADH -  Logo_Nocibe">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_4.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/LTG_Conseil_Logo.svg" alt="ADH - LTG">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_5.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/nsia_banque.jpg" alt="ADH - NSIA Banque Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_6.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/scb.jpeg" alt="ADH - SCB Logo Image">
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="client_logo_item">
-                    <img src="assets/images/clients/client_logo_7.webp" alt="Techco - Client Logo Image">
+                    <img src="asset/images/clients/Logo-SOS-new.png" alt="ADH -  Logo-SOS">
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/71356-pnhg.jpg" alt="ADH - PNHG Logo Image">
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/em.jpg" alt="ADH - Etat major Logo Image">
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/aid.jpeg" alt="ADH - Client Logo Image">
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="client_logo_item">
+                    <img src="asset/images/clients/proximajobpng" alt="ADH - Proximajob Logo Image">
                   </div>
                 </div>
               </div>
